@@ -1,3 +1,8 @@
+- Introduced the copy=True kwarg to ndhist's rebin_axis method. If set to
+  ``True``, a deepcopy of the ndhist object is created first and the rebin
+  operation is performed on that copy. The default is ``True`` in order to have
+  by default the same behaviour as dashi's rebin_axis method.
+
 - Zero bins, that would be discarded by ndhist's rebin_axis method when the axis
   is extendable and the nbins_to_merge is not a true divisor of the number of
   bins of the axis. Otherwise such bins would have a pre-set value when the axis
